<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingBottom="70sp" >

        <EditText
            android:id="@+id/nameIDEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_message"
            android:visibility="visible"
            android:text="Q"
            android:inputType="textCapSentences">
        </EditText>

        <Switch
            style="@style/styleSwitchDefault"
            android:id="@+id/toggleWifiSwitch"
            android:text="@string/action_toggle_wifi" />

        <Switch
            style="@style/styleSwitchDefault"
            android:id="@+id/goIntentRegistrationSwitch"
            android:text="@string/action_register_go_intent"
            android:checked="false" />

        <Switch
            style="@style/styleSwitchDefault"
            android:id="@+id/rangeExtenderRegistrationSwitch"
            android:text="@string/action_register_range_extender"
            android:checked="false" />

        <Switch
            style="@style/styleSwitchDefault"
            android:id="@+id/serviceRegistrationSwitch"
            android:text="@string/action_register_service"
            android:checked="false"
            android:enabled="false" />

        <Switch
            style="@style/styleSwitchDefault"
            android:id="@+id/noPromptServiceRegistrationSwitch"
            android:text="@string/action_register_no_prompt"
            android:checked="false"
            android:enabled="false"
            android:visibility="gone" />

        <Button
            style="@style/styleButtonDefault"
            android:text="@string/action_discover_services"
            android:id="@+id/discoverServicesButton"
            android:enabled="false" />

        <Button
            style="@style/styleButtonDefault"
            android:text="@string/action_look_for_devices"
            android:id="@+id/lookForNameID" />
    </LinearLayout>
</ScrollView>